子查询实现
