# docs/swagger.json
@@ -557,6 +557,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "查询组建构建信息",
+                        "name": "查询信息",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v2.IServerReq"
+                        }
                     }
                 ],
                 "responses": {
@@ -741,6 +750,28 @@
                 },
                 "msg": {
                     "type": "object"
+                }
+            }
+        },
+        "v2.IServerReq": {
+            "type": "object",
+            "properties": {
+                "datasetNames": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "getFeatureMode": {
+                    "type": "string"
+                },
+                "queryParameter": {
+                    "type": "object",
+                    "properties": {
+                        "attributeFilter": {
+                            "type": "string"
+                        }
+                    }
                 }
             }
         },
