# internal/model/iserver.go
@@ -1,0 +1,11 @@
+package model
+
+type IServerReq struct {
+	DatasetNames   []string `json:"datasetNames"`
+	GetFeatureMode string   `json:"getFeatureMode"`
+	QueryParameter struct {
+		AttributeFilter string `json:"attributeFilter"`
+	} `json:"queryParameter"`
+}
+
+type IServerResp struct{}
